@@ -297,6 +297,18 @@ name|offset
 operator|--
 expr_stmt|;
 block|}
+comment|// if we scanned up to the start of the text, return it, its a "boundary"
+if|if
+condition|(
+name|offset
+operator|==
+literal|0
+condition|)
+block|{
+return|return
+literal|0
+return|;
+block|}
 comment|// not found
 return|return
 name|start
