@@ -148,6 +148,38 @@ name|start
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|start
+operator|=
+name|TEXT
+operator|.
+name|indexOf
+argument_list|(
+literal|"che"
+argument_list|)
+expr_stmt|;
+name|expected
+operator|=
+name|TEXT
+operator|.
+name|indexOf
+argument_list|(
+literal|"Apache"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|expected
+argument_list|,
+name|scanner
+operator|.
+name|findStartOffset
+argument_list|(
+name|text
+argument_list|,
+name|start
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|testFindEndOffset
 specifier|public
